src/objects/PP_Workshop_Member__c.object
<CustomObject>
    <description>A record for each doctor attending an event</description>
    <fields>
        <fullName>Application_Time__c</fullName>
        <label>Application Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attendance_Time__c</fullName>
        <label>Attendance Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Doctor_Email__c</fullName>
        <formula>Practice_Doctor__r.Email__c</formula>
        <label>Doctor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Phone__c</fullName>
        <formula>Practice_Doctor__r.Phone__c</formula>
        <label>Doctor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctors_Name__c</fullName>
        <formula>Practice_Doctor__r.First_Name__c + &apos; &apos; + Practice_Doctor__r.Last_Name__c</formula>
        <label>Doctors Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Application Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Names__c</fullName>
        <label>Guest Names</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Guests</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PP_Workshop__c</fullName>
        <label>PP Workshop</label>
        <referenceTo>PP_Workshop__c</referenceTo>
        <relationshipLabel>PP Workshop Members</relationshipLabel>
        <relationshipName>PP_Workshop_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Practice_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice Doctor</label>
        <referenceTo>Practice_Doctor__c</referenceTo>
        <relationshipLabel>PP Workshop Members</relationshipLabel>
        <relationshipName>PP_Workshop_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PP Workshop Member</label>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>PP Workshop Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PP Workshop Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>